# fastapi_hw30_v4

./: .gitignore  README.md  docker-compose.yaml  init-database.sh  pyproject.toml
.github/workflows/: linters.yaml  tests.yaml
alembic/: env.py
alembic/versions/: 651da1bc186a_test.py
src/: .test.env  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 2024_11_07_1133-1bd153348810_create_tables_recipes_ingredients.py  2024_11_07_1146-a5228a2314d0_create_table_ingredients_in_recipes.py  2024_11_07_1651-d65859dee08c_повторное_создание_таблиц_2.py  2024_11_07_1835-8f7bff044473_создание_таблиц.py  2024_11_08_0838-0e1da8e2750c_создание_таблиц.py  2024_11_12_1510-f10f46847d89_создание_таблиц.py
src/api/: ingredient.py  main_page.py  recipe.py  recipes.py
src/api/crud/: ingredient.py  recipe.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  ingredient.py  ingredient_in_recipe.py  recipe.py
src/core/schemas/: ingredient.py  main_page.py  recipe.py
src/tests/: __init__.py  conftest.py  data_for_tests.py  test_routes.py  test_temp.py
tests/: __init__.py  conftest.py
