[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
black = "^24.10.0"
mypy = "^1.13.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"
httpx = "^0.27.2"
trio = "^0.27.0"
pytest-asyncio = "^0.24.0"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"

[tool.pytest.ini_options]
#pythonpath = "src"
asyncio_default_fixture_loop_scope = "session"
#addopts = [
#
#    "--import-mode=importlib",
#]
#
#testpaths = [
#    "tests",
#]